# erdannews.ai

./: .gitignore  README.md  README_en.md  app.py  debug_scraper.bat  debug_scraper.sh  pyproject.toml  requirements.txt  start_all.bat  start_all.sh  start_scheduler.bat  start_web.bat
src/: config.py  database.py  scheduler.py  scraper.py  summarizer.py
